--- a/alt/styles.css
+++ b/alt/styles.css
@@ -1,23 +1,26 @@
 #img-div {
-   width:100vw;
-   height: 300px;
-   display: flex;
-   justify-content: center;
-   align-items: center;
-   flex-direction: column;
+  width: 100vw;
+  height: 300px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+}
+h1 {
+  display: flex;
+  justify-content: center;
 }
 #main {
   width: 100%;
   height: 100%;
 }
 #image {
-    
-    height: auto;
-    max-width: 100%;
-  
-    display: block;
-    }
-    #img-caption {
-        width: 80%;
-        height: auto;
-    }
+  height: auto;
+  max-width: 100%;
+
+  display: block;
+}
+#img-caption {
+  width: 80%;
+  height: auto;
+}
